[package]
name = "chip8embedded"
version = "0.1.0"
authors = ["Mael Guillossou <mael.guillossou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xiao_m0 = "0.9.0"
panic-halt = "0.2.0"
ssd1306 = "0.5.1"
embedded-graphics = "0.6.2"
chip8core = { path = "../chip8core" }
